[package]
name = "bthome-logger"
version = "0.1.0"
edition = "2024"
authors = ["Jakub JaneÄek"]
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
bluer = { version = "0.17.4", features = ["bluetoothd"] }
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
serde = "1.0.226"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5.7"
uuid = "1.18.1"

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["rustc", "cargo"] }
